--- a/style.css
+++ b/style.css
@@ -43,6 +43,19 @@ h1 {
 #addBtn:hover {
   background-color: #3367d6;
 }
+#addBtns{
+    margin-top: 15px;
+  padding: 10px 20px;
+  background-color: #4285f4;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 0.95rem;
+  cursor: pointer;
+}
+#addBtns:hover {
+  background-color: #3367d6;
+}
 
 .resource-grid {
   display: flex;
