--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1 {
   background-color: #3367d6;
 }
 #addBtns{
-    margin-top: 15px;
+  margin-top: 15px;
   padding: 10px 20px;
   background-color: #4285f4;
   color: white;
@@ -52,6 +52,7 @@ h1 {
   border-radius: 5px;
   font-size: 0.95rem;
   cursor: pointer;
+  text-decoration: none;
 }
 #addBtns:hover {
   background-color: #3367d6;
